...
                  ),
                ],
              ),
              const SizedBox(height: 18),
              Text(
                'Welcome back,',
                key: const Key('homeGreetingText'),
                style: GoogleFonts.dmSans(
                  fontSize: 13,
                  fontWeight: FontWeight.w300,
                  color: FieldifyColors.g200,
                ),
              ),
...
